fix data-table height to 240px with overflow-y: scroll for now

--- a/prototype/src/styles/app.css
+++ b/prototype/src/styles/app.css
@@ -134,6 +134,11 @@ ul li {
 }
 
 /* table styles */
+#data-table {
+	height: 240px;
+	overflow-y: scroll;
+}
+
 td, th {
     padding: 1px 4px;
 }
